# cube-app

./: .gitignore  README.md  index.html  main.js  package-lock.json  package.json  preload.js
assets/explanations/: 01001.txt  01002.txt  01003.txt  01004.txt  01005.txt  01006.txt  01007.txt  01008.txt  01009.txt  01010.txt  01011.txt  01012.txt  01013.txt  01014.txt  01015.txt  01016.txt  01017.txt  01018.txt  01019.txt  01020.txt  01021.txt  01022.txt  01023.txt  01024.txt  01025.txt  01026.txt  01027.txt  01028.txt  01029.txt  01030.txt  01031.txt  01032.txt  01033.txt  01034.txt  01035.txt  01036.txt  01037.txt  01038.txt  01039.txt  01040.txt  (+5749 more)
assets/explanations_it/: 01001.txt  01002.txt  01003.txt  01004.txt  01005.txt  01006.txt  01007.txt  01008.txt  01009.txt  01010.txt  01011.txt  01012.txt  01013.txt  01014.txt  01015.txt  01016.txt  01017.txt  01018.txt  01019.txt  01020.txt  01021.txt  01022.txt  01023.txt  01024.txt  01025.txt  01026.txt  01027.txt  01028.txt  01029.txt  01030.txt  01031.txt  01032.txt  01033.txt  01034.txt  01035.txt  01036.txt  01037.txt  01038.txt  01039.txt  01040.txt  (+5747 more)
rust/: .gitignore  Cargo.toml  README.md  build.sh  install.sh
rust/src/: app.rs  database.rs  file_handler.rs  history.rs  icons.rs  main.rs  translations.rs  ui.rs
src/code/: pdf.js  react-router.js
src/js/: App.js
