[package]
name = "cube-app"
version = "1.0.0"
edition = "2021"
authors = ["Alberto Frigo"]

[dependencies]
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
image = { version = "0.25", features = ["jpeg", "png"] }
rodio = { version = "0.19", features = ["mp3", "wav"] }
pdf-render = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
walkdir = "2.5"
poll-promise = "0.3"

[dependencies.gstreamer]
version = "0.23"
features = ["v1_16"]

[dependencies.gstreamer-video]
version = "0.23"

[target.'cfg(target_os = "linux")'.dependencies]
gstreamer-player = "0.23"

[[bin]]
name = "cube-app"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true