[package]
name = "cube-app"
version = "1.0.0"
edition = "2021"
authors = ["Alberto Frigo"]

[dependencies]
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["image", "svg"] }
image = { version = "0.25", features = ["jpeg", "png"] }
rodio = { version = "0.19", features = ["mp3", "wav"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5"
poll-promise = "0.3"
resvg = "0.42"
tiny-skia = "0.11"

[[bin]]
name = "cube-app"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
